test/tests/bad/num.carth
;; NoClassInstance

(define: (foo Unit)
    (Fun Unit Unit)
  (+ Unit Unit))
